--- a/pom.xml
+++ b/pom.xml
@@ -384,7 +384,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.1.1</version>
+                        <version>3.1.2</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
@@ -395,9 +395,9 @@
                                     <artifactItems>
                                         <!--https://github.com/jsimone/webapp-runner#using-without-memcached-or-redis-->
                                         <artifactItem>
-                                            <groupId>com.github.jsimone</groupId>
+                                            <groupId>com.heroku</groupId>
                                             <artifactId>webapp-runner-main</artifactId>
-                                            <version>9.0.27.1</version>
+                                            <version>9.0.31.0</version>
                                             <destFileName>webapp-runner.jar</destFileName>
                                         </artifactItem>
                                     </artifactItems>
