--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -4,12 +4,11 @@ app.description=<a href="https://github.com/JavaOPs/topjava">Java Enterprise pro
 Admin could create/edit/delete users, users - manage your profile and data (meals) via UI (AJAX) and REST with basic authorization. \
 Meals could be filtered by date and time. Meal record color depends on daily calories sum exceeding "Daily calorie limit" (editable user's profile paramets). \
 All REST interface covered with JUnit tests by Spring MVC Test и Spring Security Test.
-app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
+app.footer=<a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> internship application
 app.login=Login as
 app.profile=profile
 app.register=Registration
 app.registered=You are registered. Please Sign in.
-
 user.title=Users
 user.edit=Edit user
 user.add=Add user
@@ -20,24 +19,21 @@ user.active=Active
 user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
-
 userTo.name=Name
 userTo.email=Email
 userTo.password=Password
 userTo.caloriesPerDay=Daily calorie limit
-
 meal.title=Meals
 meal.edit=Edit meal
 meal.add=Add meal
 meal.filter=Filter
-meal.startDate=From date
-meal.endDate=To date
-meal.startTime=From time
-meal.endTime=To time
+meal.startDate=From date (inclusive)
+meal.endDate=To date (inclusive)
+meal.startTime=From time (inclusive)
+meal.endTime=To time (exclusive)
 meal.description=Description
 meal.dateTime=Date/Time
 meal.calories=Calories
-
 common.add=Add
 common.select=Select
 common.deleted=Record deleted
@@ -48,18 +44,15 @@ common.confirm=Are you sure?
 common.save=Save
 common.cancel=Cancel
 common.search=Search
-
 exception.common.notFound=Not found entity with {0}
 exception.user.duplicateEmail=User with this email already exists
 exception.user.modificationRestriction=Admin/User modification is forbidden
 exception.meal.duplicateDateTime=You already have meal with this date/time
-
 error.appError=Application error
 error.dataNotFound=Data not found
 error.dataError=Data error
 error.validationError=Validation error
 error.wrongRequest=Wrong request
-
 NotEmpty=[{0}] must not be empty
 NotBlank=[{0}] must not be empty
 NotNull=[{0}] must not be empty
